force-app/main/default/objects/MonthlyROAKPI__c/MonthlyROAKPI__c.object-meta.xml
<CustomObject>
    <description>Almacena métricas mensuales de ROA (Cartera Activa, Nuevos, Retenidos, Fugados, Recuperados) por Owner para análisis histórico.</description>
    <label>KPI Mensual ROA</label>
    <nameField>
        <label>Nombre de KPI Mensual ROA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Mensual ROA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>