force-app/main/default/objects/MonthlyROAKPI__c/fields/CarteraActiva__c.field-meta.xml
<CustomField>
    <fullName>CarteraActiva__c</fullName>
    <description>Cantidad de clientes únicos con facturas en el mes actual, agrupados por Owner.</description>
    <inlineHelpText>Total de clientes que facturaron durante el mes actual.</inlineHelpText>
    <label>Cartera activa</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>