force-app/main/default/objects/MonthlyROAKPI__c/fields/ChurnPercent__c.field-meta.xml
<CustomField>
    <fullName>ChurnPercent__c</fullName>
    <formula>Fugados__c /  CarteraActiva__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Churn Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>