force-app/main/default/objects/MonthlyROAKPI__c/fields/Fugados__c.field-meta.xml
<CustomField>
    <fullName>Fugados__c</fullName>
    <description>Cantidad de clientes que facturaron en los últimos 3 meses PERO NO en el mes actual.</description>
    <inlineHelpText>Clientes que estuvieron activos pero dejaron de facturar en el mes actual.</inlineHelpText>
    <label>Fugados</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>