force-app/main/default/objects/MonthlyROAKPI__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>Primer día del mes al que corresponden las métricas (ejemplo: 01/12/2024 para Diciembre 2024).</description>
    <inlineHelpText>Siempre debe ser el día 1 del mes correspondiente.</inlineHelpText>
    <label>Mes</label>
    <required>true</required>
    <type>Date</type>
</CustomField>