force-app/main/default/objects/MonthlyROAKPI__c/fields/MonthNumber__c.field-meta.xml
<CustomField>
    <fullName>MonthNumber__c</fullName>
    <description>Número del mes (1-12) al que corresponden las métricas.</description>
    <inlineHelpText>1=Enero, 2=Febrero, ..., 12=Diciembre.</inlineHelpText>
    <label>Número de mes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>