force-app/main/default/objects/MonthlyROAKPI__c/fields/Nuevos__c.field-meta.xml
<CustomField>
    <fullName>Nuevos__c</fullName>
    <description>Cantidad de clientes que facturaron por primera vez en el mes actual (no tenían facturas antes del mes actual).</description>
    <inlineHelpText>Clientes nuevos que aparecieron por primera vez en el mes.</inlineHelpText>
    <label>Nuevos</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>