force-app/main/default/objects/MonthlyROAKPI__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuario (Owner) propietario de las cuentas para las que se calculan las métricas mensuales de ROA.</description>
    <inlineHelpText>Usuario de Salesforce responsable de las cuentas analizadas.</inlineHelpText>
    <label>Propietario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KPI_Mensual_ROA</relationshipName>
    <type>Lookup</type>
</CustomField>