force-app/main/default/objects/MonthlyROAKPI__c/fields/Recuperados__c.field-meta.xml
<CustomField>
    <fullName>Recuperados__c</fullName>
    <description>Cantidad de clientes que NO facturaron en el mes anterior pero SÍ facturaron en el mes actual.</description>
    <inlineHelpText>Clientes que volvieron a facturar después de haber estado inactivos el mes anterior.</inlineHelpText>
    <label>Recuperados</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>