force-app/main/default/objects/MonthlyROAKPI__c/fields/RetainedPercent__c.field-meta.xml
<CustomField>
    <fullName>RetainedPercent__c</fullName>
    <formula>Retenidos__c /  CarteraActiva__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retained Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>