force-app/main/default/objects/MonthlyROAKPI__c/fields/Retenidos__c.field-meta.xml
<CustomField>
    <fullName>Retenidos__c</fullName>
    <description>Cantidad de clientes que facturaron en los últimos 3 meses Y en el mes actual.</description>
    <inlineHelpText>Clientes que se mantuvieron activos durante el período analizado.</inlineHelpText>
    <label>Retenidos</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>