force-app/main/default/objects/MonthlyROAKPI__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>Clave única compuesta por OwnerId|YYYY-MM (ejemplo: &quot;005xxx|2024-12&quot;) para identificar unívocamente cada registro mensual por Owner. Usado para upsert.</description>
    <externalId>true</externalId>
    <inlineHelpText>Formato: {OwnerId}|{Año}-{Mes}. Ejemplo: 00558000000abcAA|2024-12</inlineHelpText>
    <label>Clave única</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>