force-app/main/default/objects/MonthlyROAKPI__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Año al que corresponden las métricas (ejemplo: 2025).</description>
    <inlineHelpText>Año del período analizado.</inlineHelpText>
    <label>Año</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>